Fixing bug 284993. Make sure the new content viewer is properly initialized before fireing location changed notifications. r=bzbarsky@mit.edu, sr=darin@meer.net